--- a/nmct.ba.cashlessproject.ui.customers/View/MainWindow.xaml
+++ b/nmct.ba.cashlessproject.ui.customers/View/MainWindow.xaml
@@ -42,7 +42,7 @@
             <Border Style="{StaticResource BorderOnder}"/>
             <TextBlock Style="{StaticResource Copyright}" Text="© Houck IT solutions"/>
             <TextBlock Style="{StaticResource GegevensVereniging}"><Run Text="Naam vereniging"/><LineBreak/><Run Text="Adres vereniging"/></TextBlock>
-            <Button Style="{StaticResource Afmelden}" Command="{Binding AfmeldenCommand}" Content="Afmelden" />
+            <Button Style="{StaticResource Afmelden}" Command="{Binding LogoutCommand}" Content="Afmelden" />
         </Grid>
 
     </Grid>
