--- a/nmct.ba.cashlessproject.ui.employees/App.xaml
+++ b/nmct.ba.cashlessproject.ui.employees/App.xaml
@@ -25,6 +25,10 @@
             <Setter Property="BorderBrush" Value="#A9CF54"></Setter>
         </Style>
 
+        <Style TargetType="{x:Type ComboBox}">
+            <Setter Property="Margin" Value="8px"></Setter>
+        </Style>
+
         <Style TargetType="{x:Type Image}">
             <Setter Property="Margin" Value="8px"></Setter>
         </Style>
