--- a/nmct.ba.cashlessproject.ui.employees/View/Order.xaml
+++ b/nmct.ba.cashlessproject.ui.employees/View/Order.xaml
@@ -24,8 +24,8 @@
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
             <Border Style="{StaticResource BorderBoven}"/>
-            <TextBlock Style="{StaticResource Titel}" Text="Kassierster"/>
-            <TextBlock Style="{StaticResource Titel}" Text="{Binding Employee}" Margin="160,8,8,8"/>
+            <TextBlock Style="{StaticResource Titel}" Text="Kassamedewerker"/>
+            <TextBlock Style="{StaticResource Titel}" Text="{Binding Employee}" Margin="260,8,8,8"/>
             <Button Grid.Column="1" Content="Scan klant" Command="{Binding ScanCustomerCommand}" />
         </Grid>
 
@@ -62,8 +62,6 @@
 
             <TextBlock Grid.Column="6" Grid.ColumnSpan="2" Text="Saldo:"/>
             <TextBox Grid.Column="7" Grid.ColumnSpan="2" Text="{Binding Customer.Balance}"/>
-
-            <Button Grid.Column="9" Grid.ColumnSpan="3" Content="Wijzig Saldo" IsEnabled="{Binding EnableDisableRegister}" />
 
             <Border Style="{StaticResource BorderKassa}"/>
 
