--- a/nmct.ba.cashlessproject.ui.employees/View/Order.xaml
+++ b/nmct.ba.cashlessproject.ui.employees/View/Order.xaml
@@ -108,7 +108,7 @@
             <TextBlock Grid.Row="1" Grid.Column="9" Grid.ColumnSpan="3" Margin="50,8,8,8" Text="{Binding TotalOrder}"/>
 
             <Button Grid.Row="2" Grid.Column="9" Grid.ColumnSpan="3" Content="Afrekenen" Command="{Binding CheckOutCommand}" IsEnabled="{Binding EnableDisableCheckOut}" />
-            <Button Grid.Row="3" Grid.Column="9" Grid.ColumnSpan="3" Content="Annuleer bestelling" Command="{Binding CancelOrderCommand}" IsEnabled="{Binding EnableDisableCheckOut}" />
+            <Button Grid.Row="3" Grid.Column="9" Grid.ColumnSpan="3" Content="Annuleer bestelling" Command="{Binding CancelOrderCommand}" IsEnabled="{Binding EnableDisableCancelOrder}" />
             <Button Grid.Row="4" Grid.Column="9" Grid.ColumnSpan="3" Content="Nieuwe klant" Command="{Binding CancelCustomerCommand}" IsEnabled="{Binding EnableDisableRegister}" />
 
             <TextBlock Grid.Row="5" Grid.Column="9" Grid.ColumnSpan="3" Text="{Binding WarningBalance}" />
