--- a/nmct.ba.cashlessproject.ui.management/View/ChangePassword.xaml
+++ b/nmct.ba.cashlessproject.ui.management/View/ChangePassword.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:vm="clr-namespace:nmct.ba.cashlessproject.ui.management.ViewModel"
              mc:Ignorable="d" 
-             d:DesignHeight="410" d:DesignWidth="780">
+             d:DesignHeight="880" d:DesignWidth="1280">
     <UserControl.DataContext>
         <vm:ChangePasswordVM />
     </UserControl.DataContext>
@@ -35,14 +35,16 @@
         </Grid.RowDefinitions>
 
         <TextBlock Grid.Row="0" Grid.ColumnSpan="2" Text="Huidige wachtwoord"/>
-        <TextBox Grid.Row="0" Grid.Column="3" Grid.ColumnSpan="3" Text="{Binding CurrentPassword}" />
+        <PasswordBox Grid.Row="0" Grid.Column="3" Grid.ColumnSpan="3" Margin="8,20,8,20" VerticalContentAlignment="Center" Name="txtCurrentPassword" PasswordChanged="txtCurrentPassword_PasswordChanged"/>
 
         <TextBlock Grid.Row="1" Grid.ColumnSpan="2" Text="Nieuw wachtwoord"/>
-        <TextBox Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="3" Text="{Binding NewPassword}"/>
+        <PasswordBox Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="3" Margin="8,20,8,20" VerticalContentAlignment="Center" Name="txtNewPassword" PasswordChanged="txtNewPassword_PasswordChanged"/>
 
         <TextBlock Grid.Row="2" Grid.ColumnSpan="2" Text="Nieuw hertypen"/>
-        <TextBox Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="3" Text="{Binding NewPasswordAgain}"/>
+        <PasswordBox Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="3" Margin="8,20,8,20" VerticalContentAlignment="Center" Name="txtNewPasswordAgain" PasswordChanged="txtNewPasswordAgain_PasswordChanged" />
 
         <Button Grid.Row="3" Grid.ColumnSpan="3" Content="Wijzigingen opslaan" Command="{Binding ChangePasswordCommand}"/>
+
+        <TextBlock Grid.Row="4" Grid.ColumnSpan="3" Text="{Binding Error}" />
     </Grid>
 </UserControl>
